# cpu_raytracer

./: .gitignore  CMakeLists.txt  Camera.h  ConsoleApplication89.cpp  Light.h  Math.cpp  Object.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Plane.cpp  Plane.h  README.md  Ray.cpp  Ray.h  SceneObject.h  Sphere.cpp  Sphere.h  Vector2.cpp  Vector3.cpp  Vector3.h  main.cpp
src/: Bitmap.cpp  Bitmap.h  Math.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Plane.cpp  SceneObject.h  Sphere.h  Vector2.h  Vector3.h  main.cpp
